centos-ansible-k8s-1.15.2/traefik/traefik-init.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress
  namespace: traefik
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress
      terminationGracePeriodSeconds: 60

      volumes:
      - name: ssl
        secret:
          secretName: traefik-tls-cert
      - name: config
        configMap:
          name: traefik-config
          defaultMode: 0644
          items:
          - key: traefik.toml
            path: traefik.toml

      containers:
      - image: traefik:1.7
        name: traefik-ingress-lb
        volumeMounts:
        - name: ssl
          mountPath: /certs          
        - name: config
          mountPath: /etc/traefik.toml
          subPath: traefik.toml         
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: admin
          containerPort: 8080
        args:
        - --api
        - --kubernetes
        - --logLevel=INFO
        - --insecureskipverify=true
        - --configFile=/etc/traefik.toml 

---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: traefik
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: http
    - protocol: TCP
      port: 443
      name: https
    - protocol: TCP
      port: 8080
      name: admin
  type: LoadBalancer
